dark mode fixes

--- a/global/style.css
+++ b/global/style.css
@@ -22,7 +22,7 @@
 	    --heading-text-color: #fff;
 	    --text-color: #ddd;
 	    --inverted-text-color: #000;
-	    --transparent-header-color: rgba(17, 17, 17, 0.85);
+	    --transparent-header-color: rgba(30, 30, 30, 0.85);
 	    --minor-text-color: #888;
         --control-color: #fff4;
         --control-text-color: #fff;
@@ -36,7 +36,7 @@
     --heading-text-color: #fff;
     --text-color: #ddd;
     --inverted-text-color: #000;
-    --transparent-header-color: rgba(17, 17, 17, 0.85);
+    --transparent-header-color: rgba(30, 30, 30, 0.85);
     --minor-text-color: #888;
     --control-color: #fff4;
     --control-text-color: #fff;
